[metadata]
name = bias-metrics
version = 1.0.0
author = Nathalie Rzepka
# author_email = your email
description = A Python package to check for algorithmic bias.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/nathalierze/bias-metrics
project_urls =
    Bug Tracker = https://github.com/nathalierze/bias-metrics/issues
    repository = https://github.com/nathalierze/bias-metrics
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src